--- a/src/Components/Menu.module.css
+++ b/src/Components/Menu.module.css
@@ -11,8 +11,6 @@ html{
 .menuLinks{
     background-color: darkblue;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     justify-content: space-evenly;
     width:100%;
     height: 4.5rem;
@@ -23,6 +21,10 @@ html{
         color: white;
         text-decoration: none;
         font-size: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         & p{
             font-size: 1rem;
         }
