--- a/src/Components/Menu/Menu.module.css
+++ b/src/Components/Menu/Menu.module.css
@@ -12,7 +12,7 @@ html{
 }
 
 .menuLinks{
-    background-color: darkblue;
+    background-color: #020D3F;
     display: flex;
     justify-content: space-evenly;
     width:100%;
@@ -20,6 +20,7 @@ html{
     align-items: center;
     position: fixed;
     bottom: 0px;
+    border-top: 2px solid white;
     & a{
         color: white;
         text-decoration: none;
