--- a/src/Routes/Diagnostico.module.css
+++ b/src/Routes/Diagnostico.module.css
@@ -62,6 +62,7 @@ span {
 .dadosinput {
     width: 220px;
     height: 30px;
+    border: 1px solid #020D3F;
 }
 
 .sintomasinput, .procedimentoinput, .obsinput {
@@ -89,6 +90,7 @@ input[type="radio"] + label {
     border: 1px solid #ffffff;
     border-radius: 50%;
     margin-left: 5px;
+    cursor: pointer;
 }
 
 /* Estilize o input de rádio quando estiver marcado (selecionado) */
@@ -122,4 +124,26 @@ button {
     background-color: #3a3a3a;
     border: 1px solid white;
     color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.errospan {
+    color: red;
+    display: block;
+    font-size: 14px;
+
+}
+
+.erroinput {
+    border: 3px solid red;
+}
+
+.certoinput {
+    border: 3px solid green;
+}
+
+.spanescondido {
+    font-size: 14px;
+    display: none;
 }
