--- a/src/Routes/Hospitais/Hospitais.module.css
+++ b/src/Routes/Hospitais/Hospitais.module.css
@@ -7,6 +7,8 @@
     gap: 10px;
     color: white;
     margin-bottom: 4.5rem;
+    overflow-y: auto;
+    max-height: 100vh;
 }
 .cabecalho{
     grid-column: 1/13;
@@ -39,6 +41,7 @@ ul{
     border-radius: 2rem 2rem 0 0;
     background-color: white;
     color: black;
+    overflow-y: auto;
     
     & li{
         margin: 1rem;
