--- a/src/Routes/Perfil/Perfil.module.css
+++ b/src/Routes/Perfil/Perfil.module.css
@@ -28,12 +28,9 @@ main {
         margin-top: 2rem;
         display: flex;
         flex-direction: column;
+
         align-items: center;
-        & .logo{
-            width: 6rem;
-            height: 6rem;
-            background-color: yellow;
-        }
+
         & hr{
             width: 100%;
             margin: 2rem 0;
@@ -96,5 +93,18 @@ main {
     }
 }
   
-  
+
+@media screen and (max-width:300px) {
+    .conteudoOpcoesPerfil a {
+        margin-right: 2rem;
+    }
+    
+}
+
+@media screen and (max-width:280px) {
+    .conteudoOpcoesPerfil a {
+        margin-right: 4rem;
+    }
+    
+}
   
