--- a/src/Routes/Ambulancias.module.css
+++ b/src/Routes/Ambulancias.module.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 	grid-template-rows: repeat(auto, 100px);
+    overflow-y: auto;
 }
 
 .boxazul{
@@ -19,7 +20,8 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;    
-    height: 450px;
+    height: 500px;
+
 }
 
 .boxazul {
@@ -29,11 +31,7 @@
 
 }
 
-.logo{
-    width: 80px;
-    height: 80px;
-    background-color: yellow;
-}
+
 
 .ocorrencias,
 .ambdisponiveis,
@@ -50,6 +48,7 @@
     text-align: center;
     flex-wrap: wrap;
     justify-content: center;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.534);
 }
 
 .ocorrencias p,
@@ -61,4 +60,5 @@
     border-radius: 10px;
     width: 150px;
     height: 20px;
+    box-shadow: 2px 2px rgba(255, 255, 255, 0.308);
 }
