--- a/src/Routes/Hospitais/Hospitais.module.css
+++ b/src/Routes/Hospitais/Hospitais.module.css
@@ -6,7 +6,8 @@
     grid-template-rows: auto 1fr;
     gap: 10px;
     color: white;
-    margin-bottom: 4.5rem;
+    margin-bottom: 7rem;
+    overflow-y: auto;
 }
 .cabecalho{
     grid-column: 1/13;
@@ -39,6 +40,7 @@ ul{
     border-radius: 2rem 2rem 0 0;
     background-color: white;
     color: black;
+    /* margin-bottom: 4.5rem; */
     
     & li{
         margin: 1rem;
