--- a/src/Components/Menu/Menu.module.css
+++ b/src/Components/Menu/Menu.module.css
@@ -32,11 +32,12 @@ html{
         & p{
             font-size: 1rem;
         }
-        .active {
-            background-color: #3a3a3a;
-            padding: 2rem;
-            width: 20rem;
-            color: red;
-        }
     }
+}
+
+a .active {
+    background-color: #3a3a3a;
+    padding: 2rem;
+    width: 20rem;
+    color: red;
 }
