--- a/src/Routes/Cadastro/Cadastro.scss
+++ b/src/Routes/Cadastro/Cadastro.scss
@@ -33,7 +33,6 @@ html {
         grid-row: 3/5;
         border: 1px solid white;
         display: flex;
-        // flex-wrap: wrap;
         flex-direction: column;
         gap: 5rem;
         align-items: center;
@@ -41,7 +40,6 @@ html {
         border-top-right-radius: 3rem;
         border-top-left-radius: 3rem;
         padding: 2rem;
-        padding-top: 5rem;
 
         .titulo{
             font-size: 4rem;
@@ -58,7 +56,7 @@ html {
             gap: 1rem;
             max-width: 45rem;
             width: 100%;
-            height: 35rem;
+            height: 40rem;
             // border: 1px solid ;
             background-color: #020d3f;
             border: 1px solid white;
@@ -72,7 +70,6 @@ html {
                 border-radius: 3px;
                 outline: none;
                 border: 1px solid black;
-                // background-color: #3a3a3a;
                 color: white;
                 box-shadow: 0.3rem 0.3rem rgba(102, 102, 102, 0.562);
 
@@ -81,24 +78,41 @@ html {
                 }
             }
 
-            .frase-cadastro {
-                font-size: 1.6rem;
+            .frase {
+                font-size: 1.4rem;
                 display: flex;
                 justify-content: center;
                 max-width: 450px;
                 width: 100%;
+                margin-top: -2rem;
 
-                .cadastro {
-                    color: #fff;
+                p {
+                    max-width: 300px;
+                    width: 100%;
+                    text-align: center;
                 }
+            }
+
+            .nome {
+                display: flex;
+                flex-direction: column;
+                padding: 1rem 2.5rem 0rem 2.5rem;
+                justify-content: center;
+
             }
 
             .usuario {
                 display: flex;
                 flex-direction: column;
-                padding: 2.5rem;
+                padding: 0rem 2.5rem;
                 justify-content: center;
+            }
 
+            .email {
+                display: flex;
+                flex-direction: column;
+                padding: 0rem 2.5rem;
+                justify-content: center;
             }
 
             .senha {
@@ -111,43 +125,6 @@ html {
 
             }
 
-            .manter-conectado{
-                display: flex;
-                padding-left: 2.5rem;
-                padding-right: 2.5rem;
-                max-width: 45rem;
-                width: 100%;
-                justify-content: space-between;
-
-                .checkbox{
-                    display: flex;
-                    align-items: center;
-                    label {
-                        font-size: 1.6rem;
-                        font-weight: lighter;
-                        padding-left: 0.5rem;
-                        margin-top: 0.4rem;
-    
-    
-                    }
-
-                    input[type="checkbox"] {
-                        width: 1.7rem;
-                        height: 1.7rem;
-                        outline: none;
-                        border: 1px solid black;
-                        box-shadow: 0px 0px;
-
-
-                    }
-                }
-
-                p{
-                    font-size: 1.6rem;
-                }
-
-            }
-
             .entrar {
                 margin: 2.5rem;
                 height: 3.5rem;
@@ -157,7 +134,8 @@ html {
                 font-size: 2rem;
                 font-weight: bold;
                 box-shadow: 0.3rem 0.3rem rgba(102, 102, 102, 0.562);
-                margin-top: 0rem;
+                margin-top: 2rem;
+                cursor: pointer;
 
                 &:hover{
                     background-color: #e4e4e4;
@@ -177,9 +155,11 @@ html {
                     }
                 }
 
-                .frase-cadastro  {
-                    margin-top: -2rem;
+                .frase  {
+                    margin-top: -2.5rem;
                     font-size: 1.2rem;
+                    display: flex;
+                    justify-content: center;
                 }
             }
 
