--- a/src/Routes/Login/Login.scss
+++ b/src/Routes/Login/Login.scss
@@ -155,6 +155,7 @@ html {
                 font-weight: bold;
                 box-shadow: 0.3rem 0.3rem rgba(102, 102, 102, 0.562);
                 margin-top: 0rem;
+                cursor: pointer;
 
                 &:hover{
                     background-color: #e4e4e4;
