--- a/src/Routes/Cadastro/Cadastro.scss
+++ b/src/Routes/Cadastro/Cadastro.scss
@@ -56,7 +56,7 @@ html {
             gap: 1rem;
             max-width: 45rem;
             width: 100%;
-            height: 40rem;
+            height: 50rem;
             // border: 1px solid ;
             background-color: #020d3f;
             border: 1px solid white;
@@ -70,7 +70,6 @@ html {
                 border-radius: 3px;
                 outline: none;
                 border: 1px solid black;
-                color: white;
                 box-shadow: 0.3rem 0.3rem rgba(102, 102, 102, 0.562);
 
                 &:hover{
@@ -96,7 +95,7 @@ html {
             .nome {
                 display: flex;
                 flex-direction: column;
-                padding: 1rem 2.5rem 0rem 2.5rem;
+                padding: 1rem 2.5rem 2rem 2.5rem;
                 justify-content: center;
 
             }
@@ -104,14 +103,14 @@ html {
             .usuario {
                 display: flex;
                 flex-direction: column;
-                padding: 0rem 2.5rem;
+                padding: 0 2.5rem 2.5rem 2.5rem;
                 justify-content: center;
             }
 
             .email {
                 display: flex;
                 flex-direction: column;
-                padding: 0rem 2.5rem;
+                padding: 0 2.5rem 2.5rem 2.5rem;
                 justify-content: center;
             }
 
@@ -120,8 +119,7 @@ html {
                 flex-direction: column;
                 padding: 2.5rem;
                 justify-content: center;
-                margin-top: -2.5rem;
-                padding-bottom: 0;
+                padding: 0 2.5rem 2.5rem 2.5rem;
 
             }
 
@@ -140,6 +138,22 @@ html {
                 &:hover{
                     background-color: #e4e4e4;
                 }
+            }
+
+            .input-erro {
+                border: 2px solid red;
+            }
+
+            .errospan {
+                color: red;
+                display: block;
+                font-size: 14px;
+            
+            }
+
+            .spanescondido {
+                font-size: 14px;
+                display: none;
             }
 
             
