--- a/src/Routes/Cadastro/Cadastro.scss
+++ b/src/Routes/Cadastro/Cadastro.scss
@@ -157,6 +157,14 @@ html {
                 display: none;
             }
 
+            .erroinput {
+                border: 3px solid red;
+            }
+            
+            .certoinput {
+                border: 3px solid green;
+            }
+
             
 
             @media screen and (max-width:440px) {
