--- a/src/Routes/Perfil/Perfil.module.css
+++ b/src/Routes/Perfil/Perfil.module.css
@@ -8,7 +8,7 @@ main {
     grid-template-rows: auto 1fr;
     gap: 10px;
     color: black;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
     & .configuracoes {
         font-size: 2rem;
         grid-column: 12;
@@ -54,7 +54,7 @@ main {
             }
             & p{
                 color: white;
-                font-size: 1rem;
+                font-size: 1.6rem;
             }
         }
     }
