--- a/src/Routes/Ambulancias/Ambulancias.module.css
+++ b/src/Routes/Ambulancias/Ambulancias.module.css
@@ -22,7 +22,8 @@
     border-radius: 25px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;    
     height: 500px;
     margin: 10px;
