--- a/src/Routes/Perfil/Perfil.scss
+++ b/src/Routes/Perfil/Perfil.scss
@@ -1,5 +1,3 @@
-
-
 main {
     background-color: #020d3f;
     height: 100vh;
@@ -12,11 +10,14 @@ main {
             font-size: 2rem;
             grid-column: 12;
             grid-row: 1;
-            justify-self: end;
+            align-items: end;
+            display: flex;
+            flex-direction: column;
             position: relative;
             top: 1rem;
             right: 1rem;
             color: white;
+
         }
         .conta{
             width: 18rem;
@@ -26,6 +27,7 @@ main {
             display: flex;
             flex-direction: column;
             align-items: center;
+            // margin-left: 5rem;
 
                 hr{
                     width: 100%;
@@ -53,31 +55,31 @@ main {
                                 font-size: 1.6rem;
                             }
         }
-    }
-    .containerOpcoesPerfil{
-        grid-column: 1/13;
-        grid-row: 2;
-        background-color: white;
-        height: 80vh;
-        width: 100%;
-        border-radius: 5rem 5rem 0 0;
-            h1{
-                margin: 2rem 0 0 3rem;        
-            }
-    .opcoesPerfil{
-        margin: 2rem;
-            .conteudoOpcoesPerfil{
-                display: flex;
-                justify-content: space-between;
-                font-size: 2.8rem;
-                .descricaoConteudoOpcoesPerfil{
-                    display: flex;
-                    align-items: end;
-                    p{
-                        font-size: 1.5rem;
-                        margin-left: 1rem;
-                    }
+        }
+        .containerOpcoesPerfil{
+            grid-column: 1/13;
+            grid-row: 2;
+            background-color: white;
+            height: 80vh;
+            width: 100%;
+            border-radius: 5rem 5rem 0 0;
+                h1{
+                    margin: 2rem 0 0 3rem;        
                 }
+            .opcoesPerfil{
+                margin: 2rem;
+                    .conteudoOpcoesPerfil{
+                        display: flex;
+                        justify-content: space-between;
+                        font-size: 2.8rem;
+                        .descricaoConteudoOpcoesPerfil{
+                            display: flex;
+                            align-items: end;
+                            p{
+                                font-size: 1.5rem;
+                                margin-left: 1rem;
+                            }
+        }
                 a{
                     color: black;
                     height: 1rem;
@@ -96,21 +98,12 @@ main {
                 
             }
         }
+        .logout {
+            color: red;
+            margin-top: 3rem;
+            position: relative;
+            left: -2.5rem;
+            cursor: pointer;
+        }
     }
 }
-  
-
-@media screen and (max-width:300px) {
-    .conteudoOpcoesPerfil a {
-        margin-right: 2rem;
-    }
-    
-}
-
-@media screen and (max-width:280px) {
-    .conteudoOpcoesPerfil a {
-        margin-right: 4rem;
-    }
-    
-}
-  
