--- a/src/Routes/Ambulancias/Ambulancias.scss
+++ b/src/Routes/Ambulancias/Ambulancias.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variaveis";
+
 .container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -14,9 +16,9 @@
     }
     .boxbranca {
         grid-row: 2/10;
-        background-color: white;
+        background-color: $bg-color_secundaria;
         grid-column: 1/12;
-        color: rgb(255, 255, 255);
+        color: $txt-color_white;
         border-radius: 25px;
         display: flex;
         flex-wrap: wrap;
@@ -28,7 +30,7 @@
         max-width: 100vw;
 
         .ocorrencias {
-            background-color: #020d3f;
+            background-color: $bg-color_principal;
             max-width: 230px;
             width: 100%;
             min-height: 80px;
@@ -39,18 +41,18 @@
             text-align: center;
             flex-wrap: wrap;
             justify-content: center;
-            box-shadow: 5px 5px rgba(0, 0, 0, 0.534);
+            box-shadow: $border_box;
             p {
                 font-size: 15px;
-                background-color: #3a3a3a;
+                background-color: $bg-color_terciaria;
                 border-radius: 10px;
                 width: 150px;
                 height: 20px;
-                box-shadow: 2px 2px rgba(255, 255, 255, 0.308);
+                box-shadow: $border_texto;
             }
         }
         .ambdisponiveis {
-            background-color: #020d3f;
+            background-color: $bg-color_principal;
             max-width: 230px;
             width: 100%;
             min-height: 80px;
@@ -61,18 +63,18 @@
             text-align: center;
             flex-wrap: wrap;
             justify-content: center;
-            box-shadow: 5px 5px rgba(0, 0, 0, 0.534);
+            box-shadow: $border_box;
             p {
                 font-size: 15px;
-                background-color: #3a3a3a;
+                background-color: $bg-color_terciaria;
                 border-radius: 10px;
                 width: 150px;
                 height: 20px;
-                box-shadow: 2px 2px rgba(255, 255, 255, 0.308);
+                box-shadow: $border_texto;
             }
         }
         .ambativas {
-            background-color: #020d3f;
+            background-color: $bg-color_principal;
             max-width: 230px;
             width: 100%;
             min-height: 80px;
@@ -83,18 +85,18 @@
             text-align: center;
             flex-wrap: wrap;
             justify-content: center;
-            box-shadow: 5px 5px rgba(0, 0, 0, 0.534);
+            box-shadow: $border_box;
             p{
                 font-size: 15px;
-                background-color: #3a3a3a;
+                background-color: $bg-color_terciaria;
                 border-radius: 10px;
                 width: 150px;
                 height: 20px;
-                box-shadow: 2px 2px rgba(255, 255, 255, 0.308);
+                box-shadow: $border_texto;
             }
         }
         .ambocorrencias {
-            background-color: #020d3f;
+            background-color: $bg-color_principal;
             max-width: 230px;
             width: 100%;
             min-height: 80px;
@@ -105,15 +107,15 @@
             text-align: center;
             flex-wrap: wrap;
             justify-content: center;
-            box-shadow: 5px 5px rgba(0, 0, 0, 0.534);
+            box-shadow: $border_box;
 
             p{
                 font-size: 15px;
-                background-color: #3a3a3a;
+                background-color: $bg-color_terciaria;
                 border-radius: 10px;
                 width: 150px;
                 height: 20px;
-                box-shadow: 2px 2px rgba(255, 255, 255, 0.308);
+                box-shadow: $border_texto;
             }
         }
         
