--- a/src/Routes/Cadastro/Cadastro.scss
+++ b/src/Routes/Cadastro/Cadastro.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variaveis";
+
 html {
     font-size: 62.5%;
     overflow-x: hidden;
@@ -32,7 +34,7 @@ html {
     .box-branca{
         grid-column: 1/13;
         grid-row: 3/5;
-        border: 1px solid white;
+        border: $border_white;
         display: flex;
         flex-direction: column;
         gap: 5rem;
@@ -58,9 +60,8 @@ html {
             max-width: 45rem;
             width: 100%;
             height: 50rem;
-            // border: 1px solid ;
-            background-color: #020d3f;
-            border: 1px solid white;
+            background-color: $bg-color_principal;
+            border: $border_white;
 
             input {
                 max-width: 40rem;
@@ -70,11 +71,11 @@ html {
                 height: 3rem;
                 border-radius: 3px;
                 outline: none;
-                border: 1px solid black;
+                border: $border_black;
                 box-shadow: 0.3rem 0.3rem rgba(102, 102, 102, 0.562);
 
                 &:hover{
-                    background-color: #e4e4e4;
+                    background-color: $input-hover_login;
                 }
             }
 
@@ -129,7 +130,7 @@ html {
                 height: 3.5rem;
                 border-radius: 1rem;
                 outline: none;
-                border: 1px solid black;
+                border: $border_black;
                 font-size: 2rem;
                 font-weight: bold;
                 box-shadow: 0.3rem 0.3rem rgba(102, 102, 102, 0.562);
@@ -137,16 +138,12 @@ html {
                 cursor: pointer;
 
                 &:hover{
-                    background-color: #e4e4e4;
+                    background-color: $input-hover_login;
                 }
             }
 
-            .input-erro {
-                border: 2px solid red;
-            }
-
             .errospan {
-                color: red;
+                color: $txt-color_erro;
                 display: block;
                 font-size: 14px;
             
@@ -158,11 +155,11 @@ html {
             }
 
             .erroinput {
-                border: 3px solid red;
+                border: $border_erro;
             }
             
             .certoinput {
-                border: 3px solid green;
+                border: $border_certo;
             }
 
             
