--- a/src/Routes/Login/Login.scss
+++ b/src/Routes/Login/Login.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variaveis";
+
 html {
     font-size: 62.5%;
     overflow-x: hidden;
@@ -31,7 +33,7 @@ html {
     .box-branca{
         grid-column: 1/13;
         grid-row: 3/5;
-        border: 1px solid white;
+        border: $border_white;
         display: flex;
         flex-direction: column;
         gap: 5rem;
@@ -57,8 +59,8 @@ html {
             max-width: 45rem;
             width: 100%;
             height: 35rem;
-            background-color: #020d3f;
-            border: 1px solid white;
+            background-color: $bg-color_principal;
+            border: $border_white;
 
             input {
                 max-width: 40rem;
@@ -68,11 +70,11 @@ html {
                 height: 3rem;
                 border-radius: 3px;
                 outline: none;
-                border: 1px solid black;
+                border: $border_black;
                 box-shadow: 0.3rem 0.3rem rgba(102, 102, 102, 0.562);
 
                 &:hover{
-                    background-color: #e4e4e4;
+                    background-color: $input-hover_login;
                 }
             }
 
@@ -84,7 +86,7 @@ html {
                 width: 100%;
 
                 .cadastro {
-                    color: #fff;
+                    color: $txt-color_white;
                 }
             }
 
@@ -130,7 +132,7 @@ html {
                         width: 1.7rem;
                         height: 1.7rem;
                         outline: none;
-                        border: 1px solid black;
+                        border: $border_black;
                         box-shadow: 0px 0px;
 
 
@@ -148,7 +150,7 @@ html {
                 height: 3.5rem;
                 border-radius: 1rem;
                 outline: none;
-                border: 1px solid black;
+                border: $border_black;
                 font-size: 2rem;
                 font-weight: bold;
                 box-shadow: 0.3rem 0.3rem rgba(102, 102, 102, 0.562);
@@ -156,7 +158,7 @@ html {
                 cursor: pointer;
 
                 &:hover{
-                    background-color: #e4e4e4;
+                    background-color: $input-hover_login;
                 }
             }
 
@@ -168,13 +170,8 @@ html {
                 justify-content: center;
             }
 
-
-            .input-erro {
-                border: 2px solid red;
-            }
-
             .errospan {
-                color: red;
+                color: $txt-color_erro;
                 display: block;
                 font-size: 18px;
             
@@ -186,11 +183,11 @@ html {
             }
 
             .erroinput {
-                border: 3px solid red;
+                border: $border_erro;
             }
             
             .certoinput {
-                border: 3px solid green;
+                border: $border_certo;
             }
             
 
