--- a/src/Routes/Perfil/Perfil.scss
+++ b/src/Routes/Perfil/Perfil.scss
@@ -1,11 +1,13 @@
+@import "../../styles/variaveis";
+
 main {
-    background-color: #020d3f;
+    background-color: $bg-color_principal;
     height: 100vh;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: auto 1fr;
     gap: 10px;
-    color: black;
+    color: $txt-color_black;
         .configuracoes {
             font-size: 2rem;
             grid-column: 12;
@@ -16,7 +18,7 @@ main {
             position: relative;
             top: 1rem;
             right: 1rem;
-            color: white;
+            color: $txt-color_white;
 
         }
         .conta{
@@ -42,16 +44,16 @@ main {
                             width: 6rem;
                             height: 6rem;
                             border-radius: 4rem 4rem;
-                            background-color: gray;
+                            background-color: $bg-color_perfil;
                             margin-bottom: 1rem;
                             display: flex;
                             align-items: center;
                             justify-content: center;
                             font-size: 5rem;
-                            color: white;
+                            color: $txt-color_white;
                         }
                             p{
-                                color: white;
+                                color: $txt-color_white;
                                 font-size: 1.6rem;
                             }
         }
@@ -59,7 +61,7 @@ main {
         .containerOpcoesPerfil{
             grid-column: 1/13;
             grid-row: 2;
-            background-color: white;
+            background-color: $bg-color_secundaria;
             height: 80vh;
             width: 100%;
             border-radius: 5rem 5rem 0 0;
@@ -81,7 +83,7 @@ main {
                             }
         }
                 a{
-                    color: black;
+                    color: $txt-color_black;
                     height: 1rem;
 
 
@@ -99,7 +101,7 @@ main {
             }
         }
         .logout {
-            color: red;
+            color: $txt-color_erro;
             margin-top: 3rem;
             position: relative;
             left: -2.5rem;
